# Human_Detection_Tracker

./: CMakeLists.txt  readme.md
.github/workflows/: build_and_coveralls.yml
app/: CMakeLists.txt  detector.cpp  main.cpp  robot.cpp  tracker.cpp  utils.cpp
docs/: DOXYGEN
docs/html/: navtreedata.js
include/: detector.hpp  lib.hpp  robot.hpp  tracker.hpp  utils.hpp
results/: callgrind.out.27003  cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  test.cpp
